--- a/InventoryManagement/InventoryManagement.Infrastructure/InventoryManagement.Infrastructure.csproj
+++ b/InventoryManagement/InventoryManagement.Infrastructure/InventoryManagement.Infrastructure.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\InventoryManagement.Application\InventoryManagement.Application.csproj" />
     <ProjectReference Include="..\InventoryManagement.Domain\InventoryManagement.Domain.csproj" />
   </ItemGroup>
 
