--- a/InventoryManagement/InventoryManagement.API/appsettings.Development.json
+++ b/InventoryManagement/InventoryManagement.API/appsettings.Development.json
@@ -7,5 +7,10 @@
     },
     "ConnectionStrings": {
         "SvcDbContext": "Host=localhost;port=5432;Database=InventoryManagement;UserName=postgres;Password=1"
+    },
+    "BrokerOptions": {
+        "Host": "localhost",
+        "UserName": "guest",
+        "Password": "guest"
     }
 }
