--- a/InventoryManagement/InventoryManagement.Application/InventoryManagement.Application.csproj
+++ b/InventoryManagement/InventoryManagement.Application/InventoryManagement.Application.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\InventoryManagement.Domain\InventoryManagement.Domain.csproj" />
     <ProjectReference Include="..\InventoryManagement.Shared.Abstractions\InventoryManagement.Shared.Abstractions.csproj" />
+    <ProjectReference Include="..\InventoryManagement.Shared.Contract\InventoryManagement.Shared.Contracts.csproj" />
 
 
   </ItemGroup>
