--- a/InventoryManagement/InventoryManagement.Shared.Contract/InventoryManagement.Shared.Contracts.csproj
+++ b/InventoryManagement/InventoryManagement.Shared.Contract/InventoryManagement.Shared.Contracts.csproj
@@ -4,8 +4,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Authors>Reza</Authors>
+    <Version>1.1.2</Version>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.0.0</Version>
   </PropertyGroup>
 
 </Project>
